# reader_tauri

./: .env.development  .gitignore  AGENTS.md  README.md  components.d.ts  kill-port.bat  mobile.toml  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
scripts/: build-android.cjs  copy-release.cjs
src/: App.vue  components.d.ts  config.json  hostConfig.ts  index.html  main.ts  shims-vue.d.ts  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/android-config/app/: build.gradle.kts  proguard-rules.pro
src-tauri/capabilities/: default.json
src-tauri/icons/: app-icon-manifest.json  icon.icns
src-tauri/src/: config.rs  db.rs  download.rs  http.rs  lib.rs  main.rs
src/apis/: book.ts  bookDownload.ts  bookTag.ts  chapterNote.ts  favoriteBook.ts  login.ts  progress.ts  register.ts  request.ts  userRemotePage.ts
src/common/: config.ts  hostConfig.ts  ipcChannel.ts  request.ts  responsiveConfig.ts
src/components/: Clock.vue  Loading.vue  ProgressRing.vue  TagSelector.vue  ViewFooterBar.vue
src/components/window/: TitleBar.vue
src/model/: book.ts  bookTag.ts  chapterNote.ts  contentsModel.ts  favoriteBook.ts  pageModel.ts  user.ts
src/route/: index.ts
src/service/: bookPageFormatter.ts  chapterNoteService.ts  imagePreLoad.ts  touchControl.ts  windowSize.ts
src/store/: fontSize.ts  inkMode.ts  loading.ts  pageType.ts  scale.ts  theme.ts  userStore.ts
src/styles/: Element.less  Main.less  Themes.less  mobile-pagination.less
src/utils/: ipcUtil.ts  localStorageUtil.ts  log.ts  message.ts  parseUtil.ts  platform.ts  timeUtil.ts  util.ts
src/views/BookShelf/: BookShelf.less  BookShelf.mobile.less  BookShelf.pad.less  BookShelf.ts  BookShelf.vue  BookTags.vue
src/views/Config/: Config.less  Config.mobile.less  Config.pad.less  Config.vue
src/views/DownloadBook/: DownloadBook.less  DownloadBook.vue
src/views/FavoriteBook/: FavoriteBook.less  FavoriteBook.mobile.less  FavoriteBook.pad.less  FavoriteBook.vue
src/views/Home/: Home.less  Home.vue
src/views/Login/: Login.less  Login.vue
src/views/PageView/: Contents.vue  PageView.less  PageView.vue  fullScreenListener.ts  hideCursor.ts  pageCache.ts  pageView.ts
src/views/ReadingHistory/: ReadingHistory.less  ReadingHistory.mobile.less  ReadingHistory.pad.less  ReadingHistory.vue
