[package]
name = "reader"
version = "0.1.0"
description = "一个阅读器应用"
authors = ["you"]
edition = "2021"

[lib]
name = "reader_lib"
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
